--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
     <title>Document</title>
 </head>
 <body>
-
+<main>
+    <button onclick="showModal()">
+        Show window!
+    </button>
+    <section id="modal"></section>
+</main>
 </body>
+<script src="scripts/script.js"></script>
 </html>
